--- a/static/scss/common/header.scss
+++ b/static/scss/common/header.scss
@@ -72,8 +72,6 @@ header[role=banner].background-blue {
   }
   .header-logo-img{
     max-height: 48px;
-    margin-right: 15px;
-    float: left;
     position: relative;
     top: 50%;
     transform: translateY(-50%);
